Fix margin top percentage bug on Safari

--- a/css/screenshot.css
+++ b/css/screenshot.css
@@ -111,7 +111,8 @@
   -webkit-align-self: center;
       -ms-flex-item-align: center;
           align-self: center;
-  margin-top: 15%;
+  position: relative;
+  top: 10%;
   width: 25%;
   height: 48.82%;
 }
@@ -126,8 +127,9 @@
           align-self: center;
 		font-size: 5vw;
 		font-weight: 400;
-		margin-top: 10%;
-  		color: white;
+		position: relative;
+		top: 22%;
+		color: white;
 }
 
 .chatLayer {
